--- a/templates/Trick/edit.html.twig
+++ b/templates/Trick/edit.html.twig
@@ -1,26 +1,122 @@
 {# templates/Trick/edit.html.twig #}
 
-{% extends "dashboard.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block body %}
- 
- {{ include("Parts/_dashboard_layout.html.twig") }}
 
-    <div class="content-body my-4">
-        <div class="container-fluid">
-            <h4 class="card-title text-uppercase mx-3">Modifier un Trick</h4>
-            {{ include("Trick/_form.html.twig") }}
+    <!--Header start-->
+        <div class="header">    
+            <div class="header-content clearfix">
+                <div class="nav-control">
+                    <div class="hamburger">
+                        <span class="toggle-icon"><i class="icon-menu"></i></span>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <ul class="clearfix">
+                        <li class="icons dropdown">
+                            <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
+                                <span class="activity active"></span>
+                                {# <img src="../public/img/users/{{ user.avatar }}" height="40" width="40" alt="utilisateur"> #}
+                                <img src="../img/users/user.jpeg" height="40" width="40" alt="utilisateur">
+                            </div>
+                            <div class="drop-down dropdown-profile dropdown-menu">
+                                <div class="dropdown-content-body">
+                                    <ul>
+                                        <li>
+                                            <a href="#"><i class="icon-user"></i> <span>Profil</span></a>
+                                        </li>
+                                        <li>
+                                            <a href="#"><i class="icon-lock"></i> <span>Mot de passe</span></a>
+                                        </li>                        
+                                        <hr class="my-2">
+                                        <li>
+                                            <a href="#"><i class="icon-key"></i> <span>Logout</span></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </div>
-        
-    <div class="footer">
-        <div class="copyright">
-            <p>Copyright &copy; Mirko Venturi 2020</p>
+        <!--Header end-->
+
+        <!-- Nav header start-->
+        <div class="nav-header">
+            <div class="brand-logo">
+                <a href="{{ path('app_trick_home') }}">
+                    <b class="logo-abbr"><img src="../uploads/images/defaults/snowboard.jpg" alt="logo"> </b>
+                    <span class="logo-compact"><img src="./images/logo-compact.png" alt=""></span>
+                    <span class="brand-title">
+                        <img src="images/logo-text.png" alt="">
+                    </span>
+                </a>
+            </div>
         </div>
-    </div>
+        <!--Nav header end-->
+
+        <!--Main section-->
+
+        <div class="content-body my-4">
+            <div class="container-fluid">
+                <h4 class="card-title text-uppercase mx-3">Modifier un Trick</h4>
+                {{ include("Trick/_form.html.twig") }}
+            </div>
+        </div>
+
+        <!--footer-->
+            {{ include("Parts/_footer.html.twig") }}
+        <!--end-footer-->
+
+        <!--Main-Section-End-->
+
+        <!--Sidebar start-->
+        <div class="nk-sidebar">           
+            <div class="nk-nav-scroll text-uppercase font-weight-bold py-6">
+                <ul class="metismenu my-2" id="menu">
+                    <li class="nav-label" style="font-family: 'Trebuchet MS';">Born to snowboard</li>
+                    <li>
+                        {# <a href="{{ path('app_user_edit', {'id': app.user.id }) }}" aria-expanded="false"> #}
+                        {# <a href="{{ path('app_user_view', {'id': app.user.id }) }}" aria-expanded="false"> #}
+                        {# <a href="{{ path('app_user_edit') }}" aria-expanded="false"> #}
+                        <a href="#" aria-expanded="false">
+                            <i class="icon-user menu-icon"></i><span class="nav-text">Mon Profil</span>
+                        </a>
+                    </li>
+                    <hr class="my-2">
+                    <li>
+                        <a href="#" aria-expanded="false">
+                            <i class="icon-lock menu-icon"></i><span class="nav-text">Mon mot de passe</span>
+                        </a>
+                    </li>
+                    <hr class="my-2">
+                    <li>
+                        <a href="#" aria-expanded="false">
+                            <i class="icon-list menu-icon"></i><span class="nav-text">Mes Tricks</span>
+                        </a>
+                    </li>
+                    <hr class="my-2">
+                    <li>
+                        <a href="{{ path('app_trick_add') }}" aria-expanded="false">
+                            <i class="icon-note menu-icon"></i><span class="nav-text">Ajouter un Trick</span>
+                        </a>
+                    </li>
+                    <hr class="my-2">
+                    <li>
+                        <a href="#" aria-expanded="false">
+                            <i class="icon-notebook menu-icon"></i><span class="nav-text">Mes commentaires</span>
+                        </a>
+                    </li>
+                </ul>
+                <img class="img-fluid my-5" src="/OCR-P6/public/img/design/snowboarder.png" alt="snowtricks" />
+            </div>
+        <!--Sidebar end-->
 
 {% endblock %}
 
 {% block javascripts %} 
     {{ parent() }}
+    {{ encore_entry_script_tags('trick-add') }}
 {% endblock %} 
