--- a/templates/User/register.html.twig
+++ b/templates/User/register.html.twig
@@ -1,70 +1,32 @@
 {# templates/User/register.html.twig #}
 
-{% extends "layout.html.twig" %}
-
-{% block stylesheets %}
-
-  {{ parent() }}
-  <link src="../public/build/app.css" rel="stylesheet">
-
-{% endblock %}
+{% extends "base.html.twig" %}
 
 {% block title %}SnowTricks - Créer un compte{% endblock %}
 
 {% block body %}
 
+{{ include("Parts/_header.html.twig") }}
+
 <!-- Page Content -->
 <div class="container-fluid">
-  {{ parent() }}
-  <div class="row justify-content-center" style="margin-top: 10%;">
+  <div class="row justify-content-center" style="margin-top: 5%;">
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 bg-light card mt-7 p-5">
-      <h1 class="text-center text-md text-uppercase mb-4">Créer un compte</h1>
+      <h1 class="h3 mb-3 font-weight-normal text-center text-uppercase">Créer un compte</h1>
         <div class="card-body">
-
-        {# {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %} #}
-
-        {# <form action="{{ path ('account_login') }}" method="post"> #}
         {{ form_start(form) }}
         {{ form_widget(form) }}
-        <button type="submit" class="btn btn-success btn-lg col-12"><i class="fas fa-check"></i> Je m'inscris !</button>
+        <div class="form-group text-center">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Je m'inscris !</button>
+        </div>
         {{ form_end(form) }}
-        {# <form action="" method="post">
-            <div class="form-group">
-                <label for="username">Nom d'utilisateur</label>
-                {# <input type="text" name="_username" id="username" class="form-control" placeholder="Nom d'utilisateur" required value="{{ username }}">
-              <input type="text" name="_username" id="username" class="form-control" placeholder="Nom d'utilisateur" required value="">
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe</label>
-                <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe" required>
-            </div>
-            <div class="form-group text-center">
-                <button type="submit" class="btn btn-primary">Connexion</button>
-            </div>
-        </form>
-        <p class="text-center">
-            <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br>
-            <a href="{{ path('account_registration') }}">Inscription</a>
-        </p> #}
       </div>
     </div>
   </div>
 </div>
+
+<!--footer-->
+  {{ include("Parts/_footer.html.twig") }}
+<!--end-footer-->
+
 {% endblock %}
-
-{# {% extends 'base.html.twig' %}
-
-{% block title %}SnowTricks - Inscription{% endblock %}
-
-{% block body %}
-    <div class="col-lg-7 col-md-10 mx-auto">
-        <h1>Inscription sur SnowTricks</h1>
-
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-success btn-lg col-12"><i class="fas fa-check"></i> Je m'inscris !</button>
-        {{ form_end(form) }}
-    </div>
-{% endblock %} #}
