--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,22 +1,18 @@
-{% extends 'layout.html.twig' %}
+{# templates/security/login.html.twig #}
 
-{% block stylesheets %}
+{% extends "base.html.twig" %}
 
-  {{ parent() }}
-  <link src="../public/build/app.css" rel="stylesheet">
-
-{% endblock %}
-
-{% block title %}SnowTricks - Connexion{% endblock %}
+{% block title %}{{ parent() }} SnowTricks - Connexion{% endblock %}
 
 {% block body %}
 
+{{ include("Parts/_header.html.twig") }}
+
 <!-- Page Content -->
 <div class="container-fluid">
-  {{ parent() }}
 
-  <div class="row justify-content-center" style="margin-top: 4%;">
-  {% for message in app.flashes('success') %}
+  <div class="row justify-content-center" style="margin-top: 8%;">
+    {% for message in app.flashes('success') %}
         <div class="col-12 alert alert-success alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">×</span>
@@ -24,58 +20,67 @@
           <i class="fa fa-check mx-2"></i>
           <strong>{{ message }}</strong>
         </div>
-      {% endfor %}
+    {% endfor %}
   </div>
 
-  <div class="row justify-content-center" style="margin-top: 10%;">
+  <div class="row justify-content-center" style="margin-top: 4%;">
     <div class="col-xs-12 col-sm-8 col-md-6 col-lg-4 bg-light card mt-7 p-5">
       <h1 class="h3 mb-3 font-weight-normal text-center text-uppercase">Connexion</h1>
         <div class="card-body">
 
         <form method="post">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-            {% if app.user %}
-                <div class="mb-3">
-                    You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                </div>
-            {% endif %}
-
-            <div class="form-group">
-                <label for="inputText">Nom d'utilisateur</label>
-                <input type="text" value="{{ last_username }}" name="_username" id="inputText" class="form-control" required autofocus>
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
-            <div class="form-group">
-                <label for="inputPassword">Password</label>
-                <input type="password" name="password" id="inputPassword" class="form-control" required>
-            </div>
+        {% endif %}
 
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        {# <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> #}
+        <label for="inputUsername">Nom d'utilisateur</label>
+        <input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" required autofocus>
+        <label for="inputPassword">Password</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" required>
 
-            {#
-                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                See https://symfony.com/doc/current/security/remember_me.html
+        <input type="hidden" name="_csrf_token"
+            value="{{ csrf_token('authenticate') }}"
+        >
 
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" name="_remember_me"> Remember me
-                    </label>
-                </div>
-            #}
-            <div class="form-group text-center">
-                <button type="submit" class="btn btn-primary">Connexion</button>
-            </div>
-            
-        </form>
+    {#
+        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        See https://symfony.com/doc/current/security/remember_me.html
 
-        <p class="text-center">
-            {# <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br>
-            <a href="{{ path('account_registration') }}">Inscription</a> #}
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
+    #}
+
+    <div class="row my-2">
+        <div class="col-lg-12 text-center">
+            <button class="btn btn-lg btn-primary" type="submit">
+                Se connecter
+            </button>
+        </div>
+    </div>
+
+</form>
+
+<p class="text-center">
+            {# <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br> #}
+            <a href="#">Mot de passe oublié ?</a><br>
+            <a href="{{ path('app_user_register') }}">Inscription</a>
         </p>
       </div>
     </div>
   </div>
 </div>
+
+<!--footer-->
+  {{ include("Parts/_footer.html.twig") }}
+<!--end-footer-->
 {% endblock %}
