--- a/templates/Parts/_header.html.twig
+++ b/templates/Parts/_header.html.twig
@@ -17,18 +17,18 @@
               Tricks
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="{{ path('app_trick_add') }}">Ajouter une figure</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
+              <a class="dropdown-item" href="{{ path('app_trick_add') }}">Ajouter un trick</a>
+              {# <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> #}
             </div>
           </li>
           <li class="nav-item text-dark">
             <a class="nav-link text-dark" href="{{ path('app_user_register') }}">Inscription</a>
           </li>
           <li class="nav-item text-dark">
-            <a class="nav-link text-dark" href="{{ path('app_user_login') }}">Connexion</a>
+            <a class="nav-link text-dark" href="{{ path('app_login') }}">Connexion</a>
           </li>
         </ul>
       </div>
