--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -1,15 +1,15 @@
 {# templates/Home/home.html.twig #}
 
-{% extends "layout.html.twig" %}
+{# {% extends "layout.html.twig" %} #}
+{% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-  {{ parent() }}
+  {# {{ parent() }} #}
   {# <link src="../public/build/app.css" rel="stylesheet"> #}
-  {{ encore_entry_link_tags('home') }}
+  {# {{ encore_entry_link_tags('app') }} #}
+  {# {{ encore_entry_link_tags('home') }} #}
 
-{% endblock %}
 
-{% block title %}{{ parent() }} Liste des figures {% endblock %}
+{% block title %}{{ parent() }} Accueil {% endblock %}
 
 {% block body %}
 
@@ -17,7 +17,7 @@
 
 <!-- Page Content -->
 <div class="container-fluid" id="trick-container">
-  {{ parent() }}
+  {# {{ parent() }} #}
 
   <div class="row">
       <img src="../public/img/design/snowtrick-background.jpg" class="img-fluid" alt="Responsive image"> 
@@ -42,6 +42,8 @@
         <div class="col-lg-2 col-md-5 col-xs-12 my-4 mx-4">
           <div class="card h-100">
             <h4 class="card-header">{{ trick.name }}</h4>
+              {# {% if app.user %} #}
+              {# {% if is_granted('ROLE_USER') %} #}
               <div class="float-right">
                 <a href="{{ path('app_trick_edit', {'id': trick.id }) }}">
                   <i class="fas fa-pencil-alt"></i>
@@ -50,6 +52,7 @@
                   <i class="fas fa-trash-alt"></i>
                 </a>
               </div>
+              {# {% endif %} #}
               <div class="card-body">
                 <a href="{{ path('app_trick_view', {'id': trick.id}) }}"><img class="card-img-top home border border-primary py-1 px-1" src="../public/img/tricks/covers/{{ trick.fileName }}" alt="Trick"></a>
                 <p class="card-text my-2 text-left"><strong>Ajouté le {{ trick.dateAdd | date('d/m/Y') }} à {{ trick.dateAdd | date('H:i') }}</strong></p>
@@ -75,10 +78,15 @@
       <a href="javascript:;" id="scrollToTop"><i class="fa fa-arrow-circle-up fa-3x"></i></a>
     </div>
 
+  <!--footer-->
+    {{ include("Parts/_footer.html.twig") }}
+  <!--end-footer-->
+
 <!-- /.container -->
-    {% block javascripts %}
-      {{ parent() }}
-      {{ encore_entry_script_tags('app') }}
-    {% endblock %} 
+    {# {% block javascripts %}
+      {# {{ parent() }} #}
+      {# {{ encore_entry_script_tags('scroll') }} #}
+      {# {{ encore_entry_script_tags('trick') }} #}
+    {# {% endblock %}  #}
 
 {% endblock %}
