Update Home Templates

--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -1,13 +1,6 @@
 {# templates/Home/home.html.twig #}
 
-{# {% extends "layout.html.twig" %} #}
 {% extends 'base.html.twig' %}
-
-  {# {{ parent() }} #}
-  {# <link src="../public/build/app.css" rel="stylesheet"> #}
-  {# {{ encore_entry_link_tags('app') }} #}
-  {# {{ encore_entry_link_tags('home') }} #}
-
 
 {% block title %}{{ parent() }} Accueil {% endblock %}
 
@@ -17,13 +10,14 @@
 
 <!-- Page Content -->
 <div class="container-fluid" id="trick-container">
-  {# {{ parent() }} #}
 
   <div class="row">
       <img src="../public/img/design/snowtrick-background.jpg" class="img-fluid" alt="Responsive image"> 
   </div>
+
+  <div class="row justify-content-center">
   {% for message in app.flashes('success') %}
-    <div class="col-12 alert alert-success alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
+    <div class="col-4 alert alert-success alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
@@ -31,18 +25,19 @@
       <strong>{{ message }}</strong>
     </div>
   {% endfor %}
+  </div>
 
   <!-- Scroll To Bottom Arrow-->
   <p class="float-right">
       <a href="javascript:;" id="scrollToBottom"><i class="fa fa-arrow-circle-down fa-3x"></i></a>
   </p>
   <!-- Tricks Section -->
-    <div class="row text-center">
+    <div class="row text-center" id="trickSection">
       {% for trick in tricks %}
         <div class="col-lg-2 col-md-5 col-xs-12 my-4 mx-4">
           <div class="card h-100">
             <h4 class="card-header">{{ trick.name }}</h4>
-              {# {% if app.user %} #}
+              {% if app.user %}
               {# {% if is_granted('ROLE_USER') %} #}
               <div class="float-right">
                 <a href="{{ path('app_trick_edit', {'id': trick.id }) }}">
@@ -52,11 +47,10 @@
                   <i class="fas fa-trash-alt"></i>
                 </a>
               </div>
-              {# {% endif %} #}
+              {% endif %}
               <div class="card-body">
                 <a href="{{ path('app_trick_view', {'id': trick.id}) }}"><img class="card-img-top home border border-primary py-1 px-1" src="../public/img/tricks/covers/{{ trick.fileName }}" alt="Trick"></a>
                 <p class="card-text my-2 text-left"><strong>Ajouté le {{ trick.dateAdd | date('d/m/Y') }} à {{ trick.dateAdd | date('H:i') }}</strong></p>
-                {# <p class="card-text">{{ trick.author }}</p> #}
               </div>
             <div class="card-footer">
               <a href="{{ path('app_trick_view', {'id': trick.id }) }}" class="btn btn-primary text-uppercase">Voir plus</a>
@@ -83,10 +77,42 @@
   <!--end-footer-->
 
 <!-- /.container -->
-    {# {% block javascripts %}
-      {# {{ parent() }} #}
-      {# {{ encore_entry_script_tags('scroll') }} #}
-      {# {{ encore_entry_script_tags('trick') }} #}
-    {# {% endblock %}  #}
 
+{% endblock %}
+
+{% block javascripts %}
+      {{ parent() }}
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+
+/**----------------------------------------------------
+---------------------Show more Tricks------------------
+----------------------------------------------------**/
+  click = 0;
+  function loadMoreTricks (event) {
+    event.preventDefault ();
+    click++;
+    let start = 15 * click;
+    const url = "{{ path('loadTrick') }}" + start;
+    axios
+      .get (url)
+      .then (function (response) {
+        //console.log (response);
+        $ ('#trickSection').append (response.data);
+      })
+      .catch (function (error) {
+        if (response.status === 403) {
+          window.alert ("Vous n'êtes pas autorisé à effectuer cette action !");
+        } else if (response.status === 404) {
+          window.alert ("La page appelé n'existe pas");
+        } else {
+          window.alert ('Une erreur est survenue !');
+        }
+      });
+  }
+  document
+    .getElementById ('loadTrick')
+    .addEventListener ('click', loadMoreTricks);
+  </script>
 {% endblock %}
