--- a/templates/Parts/_header.html.twig
+++ b/templates/Parts/_header.html.twig
@@ -16,20 +16,25 @@
             <a class="nav-link text-dark dropdown-toggle text-dark" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Tricks
             </a>
+            {% if app.user %}
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
               <a class="dropdown-item" href="{{ path('app_trick_add') }}">Ajouter un trick</a>
-              {# <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a> #}
             </div>
           </li>
+          <li class="nav-item text-dark">
+            <a class="nav-link text-dark" href="{{ path('app_user_logout') }}">Déconnexion</a>
+          </li>
+          <li class="nav-item text-dark">
+            <a class="nav-link text-dark"><img class="rounded" src="http://localhost/OCR-P6/public/img/users/{{ app.user.avatar }}" height="20" width="20" alt="{{ app.user.username }}" /> Bonjour {{ app.user.username }}</a>
+          </li>
+          {% else %}
           <li class="nav-item text-dark">
             <a class="nav-link text-dark" href="{{ path('app_user_register') }}">Inscription</a>
           </li>
           <li class="nav-item text-dark">
-            <a class="nav-link text-dark" href="{{ path('app_login') }}">Connexion</a>
+            <a class="nav-link text-dark" href="{{ path('app_user_login') }}">Connexion</a>
           </li>
+          {% endif %}
         </ul>
       </div>
     </div>
