Update Trick Templates

--- a/templates/Trick/add.html.twig
+++ b/templates/Trick/add.html.twig
@@ -82,10 +82,8 @@
                 <ul class="metismenu my-2" id="menu">
                     <li class="nav-label" style="font-family: 'Trebuchet MS';">Born to snowboard</li>
                     <li>
-                        {# <a href="{{ path('app_user_edit', {'id': app.user.id }) }}" aria-expanded="false"> #}
-                        {# <a href="{{ path('app_user_view', {'id': app.user.id }) }}" aria-expanded="false"> #}
-                        {# <a href="{{ path('app_user_edit') }}" aria-expanded="false"> #}
-                        <a href="#" aria-expanded="false">
+                        <a href="{{ path('app_user_edit', {'id': app.user.id }) }}" aria-expanded="false">
+                        {# <a href="#" aria-expanded="false"> #}
                             <i class="icon-user menu-icon"></i><span class="nav-text">Mon Profil</span>
                         </a>
                     </li>
