--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,8 +12,8 @@
 <div class="container-fluid">
 
   <div class="row justify-content-center" style="margin-top: 8%;">
-    {% for message in app.flashes('warning') %}
-        <div class="col-4 alert alert-warning alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
+    {% for message in app.flashes('success') %}
+        <div class="col-4 alert alert-success alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
@@ -39,9 +39,6 @@
             </div>
         {% endif %}
 
-        {# <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> #}
-        {# <label for="inputEmail" class="sr-only">Email</label>
-        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus> #}
         <label for="inputUsername">Nom d'utilisateur</label>
         <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
         <label for="inputPassword">Password</label>
@@ -51,16 +48,11 @@
             value="{{ csrf_token('authenticate') }}"
         >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+    <div class="checkbox my-3 mx-2">
+        <label>
+            <input type="checkbox" name="_remember_me">  Se souvenir
+        </label>
+    </div>
 
     <div class="row my-2">
         <div class="col-lg-12 text-center">
@@ -72,7 +64,7 @@
 
 </form>
 
-<p class="text-center">
+        <p class="text-center">
             {# <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br> #}
             <a href="#">Mot de passe oublié ?</a><br>
             <a href="{{ path('app_user_register') }}">Inscription</a>
