--- a/templates/Trick/view.html.twig
+++ b/templates/Trick/view.html.twig
@@ -101,7 +101,7 @@
                                                             let dEmbedlink = "https://www.dailymotion.com/embed/" + dailyMotionId;
                                                             let iframe = document.getElementById("video-reader");
                                                             iframe.src = dEmbedlink;
-                                                        }                                                        
+                                                        }                                                    
                                                     </script>
                                                 </div>
                                             {% endfor %}
@@ -186,7 +186,7 @@
                                             <div class="entry-comments-body">
                                                 <p>
                                                 <img class="rounded" src="http://localhost/OCR-P6/public/img/users/{{ comment.user.avatar }}" height="40" width="40" alt="{{ comment.user.username }}" /><br/>
-                                                <span class="entry-comments-author"><strong>Posté par <a class="text-dark" href="{{ path('app_user_view', { 'id' : comment.user.id }) }}" target="_blank">{{ comment.user.username }}</a></strong>, </span>
+                                                <span class="entry-comments-author"><strong>Posté par <a class="text-dark" href="{{ path('app_trick_view', { 'id' : comment.user.id }) }}" target="_blank">{{ comment.user.username }}</a></strong>, </span>
                                                 <span class="comment-date text-dark">le {{ comment.dateAdd | date('d/m/Y') }} à {{ comment.dateAdd | date('H:i') }}</span>
                                                 </p> 
                                                 <p class="comment-content text-justify">{{ comment.content }}</p>
@@ -227,7 +227,7 @@
     event.preventDefault ();
     click++;
     let start = 3 * click;
-    const url = "{{ path('loadComments', {'id': trick.id} ) }}" + start;
+    const url = "{{ path('loadComments', {'id': trick.id, 'start': 5 } ) }}"
     axios
       .get (url)
       .then (function (response) {
