--- a/templates/User/profile.html.twig
+++ b/templates/User/profile.html.twig
@@ -33,14 +33,11 @@
                                 <div class="dropdown-content-body">
                                     <ul>
                                         <li>
-                                            <a href="#"><i class="icon-user"></i> <span>Profil</span></a>
-                                        </li>
-                                        <li>
                                             <a href="#"><i class="icon-lock"></i> <span>Mot de passe</span></a>
                                         </li>                        
                                         <hr class="my-2">
                                         <li>
-                                            <a href="#"><i class="icon-key"></i> <span>Logout</span></a>
+                                            <a href="{{ path('app_user_logout') }}"><i class="icon-key"></i> <span>Déconnexion</span></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -72,6 +69,17 @@
             <div class="container-fluid">
                 <div class="row justify-content-center">
 
+                 <div class="row justify-content-center">
+                    {% for message in app.flashes('success') %}
+                        <div class="col-4 alert alert-success alert-dismissible fade show mb-0 mt-1 text-center" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                        <i class="fa fa-check mx-2"></i>
+                        <strong>{{ message }}</strong>
+                        </div>
+                    {% endfor %}
+                </div>
                 
                     <div class="col-lg-6">
                         <div class="card card-small px-4 py-4 mb-4 pt-3">
@@ -111,14 +119,22 @@
                                                         <div class="form-group col-md-12">
                                                             {{ form_row(form.email) }}
                                                         </div>
-                                                        <div class="form-group col-md-12">
+                                                        {# <div class="form-group col-md-12">
                                                             {{ form_row(form.file) }}
-                                                        </div>
+                                                        </div> #}
                                                     </div>
                                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                                                     <div class="row text-center">
                                                         <div class="form-group col-lg-12 mt-4 text-center">
                                                             <button type="submit" class="btn btn-primary text-uppercase">Enregistrer les modifications</button>
+                                                        </div>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="row text-center">
+                                                        <div class="form-group col-lg-12 mt-3 text-center">
+                                                            <a class="btn btn-danger text-uppercase" href="{{ path('app_user_delete', {'id': app.user.id }) }}" onclick="return confirm(`Êtes-vous sûr de vouloir supprimer votre compte ?`)">
+                                                                <i class="fas fa-trash-alt"></i> Supprimer mon compte
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 {{ form_end(form) }}
@@ -138,89 +154,7 @@
         <!--end-footer-->
 
         <!--Sidebar start-->
-        <div class="nk-sidebar">           
-            <div class="nk-nav-scroll text-uppercase font-weight-bold py-6">
-                <ul class="metismenu my-2" id="menu">
-                    <li class="nav-label" style="font-family: 'Trebuchet MS';">Born to snowboard</li>
-                    <li>
-                        <a href="{{ path('app_user_edit', {'id': app.user.id }) }}" aria-expanded="false">
-                        {# <a href="#" aria-expanded="false"> #}
-                            <i class="icon-user menu-icon"></i><span class="nav-text">Mon Profil</span>
-                        </a>
-                    </li>
-                    <hr class="my-2">
-                    <li>
-                        <a href="#" aria-expanded="false">
-                            <i class="icon-lock menu-icon"></i><span class="nav-text">Mon mot de passe</span>
-                        </a>
-                    </li>
-                    <hr class="my-2">
-                    <li>
-                        <a href="#" aria-expanded="false">
-                            <i class="icon-list menu-icon"></i><span class="nav-text">Mes Tricks</span>
-                        </a>
-                    </li>
-                    <hr class="my-2">
-                    <li>
-                        <a href="{{ path('app_trick_add') }}" aria-expanded="false">
-                            <i class="icon-note menu-icon"></i><span class="nav-text">Ajouter un Trick</span>
-                        </a>
-                    </li>
-                    <hr class="my-2">
-                    <li>
-                        <a href="#" aria-expanded="false">
-                            <i class="icon-notebook menu-icon"></i><span class="nav-text">Mes commentaires</span>
-                        </a>
-                    </li>
-                </ul>
-                <img class="img-fluid my-5" src="/OCR-P6/public/img/design/snowboarder.png" alt="snowtricks" />
-            </div>
-        <!--Sidebar end-->
+        {{ include("Parts/_sidebar.html.twig") }}
+        <!--end-sidebar-->
 
-   
-
-
-    <!-- User Card -->
-    {# <div class="col-lg-12">
-        <div class="card card-small mb-4 pt-3">
-            <div class="card-header border-bottom text-center">
-                {# <div class="mb-3 mx-auto">
-                    <img class="rounded-circle" src="/images/{{ user.file }}" alt="Avatar" width="110"> 
-                </div>
-                <h4 class="mb-0">{{ user.username }}</h4>
-                <span class="text-muted d-block mb-2">{{ user.email }}</span> #}
-            {# </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item px-4">
-                    <strong class="text-muted d-block mb-2">Website</strong>
-                    <span>
-                        {# {% if user.u_website %}
-                            <a href="{{ user.u_website }}" target="_blank">{{ user.u_website }}</a>
-                        {% else %}
-                            Votre website
-                        {% endif %} #}
-                    {# </span>                      
-                </li> #}
-                {# <li class="list-group-item p-4">
-                    <strong class="text-muted d-block mb-2">Description</strong>
-                    <span>
-                        {% if user.u_descripti %}
-                            {{ user.u_description }}
-                        {% else %}
-                            Décrivez-vous en quelques lignes.
-                        {% endif %}
-                    </span>
-                </li> #}
-            {# </ul>
-        </div>
-    </div> #}
-    <!-- End User Card -->
-
-    <!-- Start Update Card -->
-    {# <div class="col-lg-8">
-        <div class="card card-small mb-4">
-            
-        </div>
-    </div> #}
-    <!-- End Update Card -->
 {% endblock %}
