Upload Tricks Profile Template

--- a/templates/User/user_tricks.html.twig
+++ b/templates/User/user_tricks.html.twig
@@ -9,7 +9,7 @@
 
 {% endblock %}
 
-{% block title %}SnowTricks - Mon profil{% endblock %}
+{% block title %}SnowTricks - Mes tricks{% endblock %}
 
 {% block body %}
 
